--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = 
-	adafruit/Adafruit VC0706 Serial Camera Library@^1.1.0
-	bportaluri/WiFiEsp@^2.2.2
-	bblanchon/ArduinoJson@^6.17.3
+lib_deps = featherfly/SoftwareSerial@^1.0.0
+upload_port = /dev/ttyUSB0
+;You may have to change the upload port on MAC
+;upload_port = COM0
